--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,7 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>2.3.4</version>
+            <scope>test</scope>
         </dependency>
 
 
